services/ppc-service/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ppc-service
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - placeholder.example.com
      secretName: goapps-tls
  rules:
    - host: placeholder.example.com
      http:
        paths:
          - path: /api/v1/ppc
            pathType: Prefix
            backend:
              service:
                name: ppc-service
                port:
                  number: 8082
